Migrate CRA to Vite

--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -1,5 +1,2 @@
-REACT_APP_DEV_URL=http://localhost:8080/graphql
-
-REACT_APP_PROD_URL=https://chirpboards.azurewebsites.net/graphql
-
-NODE_ENV=development
+VITE_DEV_URL=http://localhost:8080/graphql
+VITE_PROD_URL=https://chirpboards.azurewebsites.net/graphql
