--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,9 +18,18 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
 		</dependency>
+		<dependency>  
+			<groupId>org.springframework.data</groupId>  
+			<artifactId>spring-data-jpa</artifactId>  
+		</dependency>  
+		<dependency>  
+			<groupId>org.springframework.boot</groupId>  
+			<artifactId>spring-boot-starter-data-jpa</artifactId>  
+		</dependency>  
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-graphql</artifactId>
